--- a/pembuka/abstrak.tex
+++ b/pembuka/abstrak.tex
@@ -18,7 +18,7 @@
 \itshape
 \par \textit{Machine learning} atau pembelajaran mesin telah menjadi bagian dari kehidupan sehari-hari bagi banyak orang. Pengaplikasian machine learning dalam kehidupan sehari-hari termasuk dalam mendeteksi wajah, \textit{self-driving car}, prediksi cuaca, memprediksi kebiasaan orang dan banyak lagi. Banyak perusahaan, badan riset dan universitas yang terus mengembangkan \textit{machine learning} agar mendapat hasil yang lebih akurat dan cepat. Dari situlah lahir algoritma transfer, yang merupakan bagian dari \textit{machine learning}. \textit{Transfer Learning} adalah salah satu metode yang cocok digunakan untuk mengolah data yang berbentuk dua dimensi, seperti gambar dan video. 
 
-\par Pada Tugas Akhir Ini, penulis mengusulkan untuk membuat sebuah aplikasi android yang dapat mendeteksi daun. Tujuannya adalah untuk mempermudah manusia dalam mengenali daun. Metode \textit{machine learning} yang akan digunakan adalah transfer learning, menggunakan model-model yang disediakan Keras antara lain VGG16, VGG19, MobileNet, ResNet50, Inception, dan Xception.
+\par Pada Tugas Akhir Ini, penulis telah membuat sebuah aplikasi android yang dapat mendeteksi daun. Tujuannya adalah untuk mempermudah manusia dalam mengenali daun. Metode \textit{machine learning} yang akan digunakan adalah transfer learning, menggunakan model-model yang disediakan Keras antara lain VGG16, VGG19, MobileNet, ResNet50, Inception, dan Xception.
 
 \vspace*{1em}
 \noindent\bfseries Kata kunci: MobileNet, VGG16, ResNet50, Inception, Xception, Data Gambar, Pengenalan Daun, Aplikasi Android, Transfer Learning
@@ -42,7 +42,7 @@
 \noindent\textbf{Abstract} \\
 \itshape
 \par Machine learning has become a part of everyday life for many people. The application of machine learning in everyday life includes face detection, self-driving car, weather prediction, predicting people's behaviour and more. Many companies, research organization and universities are continuing to develop machine learning to get more accurate and faster results. That's where the transfer algorithm is born. Transfer Learning is a part of deep learning. Transfer Learning is one method suitable for processing two-dimensional data, such as images and videos.
-\par In this Thesis, the author proposes to create an android application that can detect type of leaves. The author is aiming to make it easier for humans to recognize leaves. The machine learning method that will be used is transfer learning, using the architectures provided by Keras include VGG16, VGG19, MobileNet, ResNet, Inception, and Xception.
+\par In this Thesis, the author develops an android application that can detect type of leaves. The author is aiming to make it easier for humans to recognize leaves. The machine learning method that will be used is transfer learning, using the architectures provided by Keras include VGG16, VGG19, MobileNet, ResNet, Inception, and Xception.
 
 \vspace*{1em}
 \noindent\bfseries Keywords: MobileNet, VGG16, ResNet50, Inception, Xception, Image Data, Leaf Recognition, Android Applications, Transfer Learning
