--- a/pembuka/lembar_pengesahan.tex
+++ b/pembuka/lembar_pengesahan.tex
@@ -6,11 +6,12 @@
 	\vspace*{0.3em}
 	
 	\textbf{TUGAS AKHIR} \\
-	Diajukan Guna Memenuhi Salah Satu Syarat\\
+	Diajukan Untuk Memenuhi Salah Satu Syarat\\
 	Memperoleh Gelar Sarjana Komputer\\
 	pada\\
 	Bidang Studi \rmk\\
-	Program Studi S-1 \jurusan\\
+	Program Studi S-1 Teknik Informatika\\
+	Departemen Informatika \\
 	\fakultas \\
 	Institut Teknologi Sepuluh Nopember
 	
