--- a/util/variables.tex
+++ b/util/variables.tex
@@ -12,12 +12,12 @@
 \def \nrp {05111540000071}
 \def \jurusan {Departemen Informatika}
 \def \fakultas {Fakultas Teknologi Informasi dan Komunikasi}
-\def \pembimbingdua {Dwi Sunaryono S.Kom., M.Kom. }
+\def \pembimbingdua {Dwi Sunaryono, S.Kom., M.Kom. }
 \def \nikpembimbingdua {197205281997021001}
-\def \pembimbingsatu {Dr.Eng. Radityo Anggoro , S.Kom, M.Sc.}
-\def \nikpembimbingsatu {19841016 2008121002}
-
-\def \juduleng {Design and Build of Online Leaf Detection Application on Android-Based Mobile Devices}
+\def \pembimbingsatu {Dr.Eng. Radityo Anggoro, S.Kom., M.Sc.}
+\def \nikpembimbingsatu {}
+198410162008121002
+\def \juduleng {Online Leaf Detection Application for Android Mobile}
 \def \jurusaneng {Informatics Department}
 \def \fakultaseng {Faculty of Information Technology and Communication}
 
